results/SpecGenBench/conversational/log-MinInArray-2023_11_28_20_04_48.txt
class MinInArray {
    //@ ensures \result == -1 <==> arr.length == 0;
    //@ ensures -1 < \result ==> (\forall int i; 0 <= i && i < arr.length; arr[\result] <= arr[i]);
    public int minElementInArray(int[] arr) {
        if (arr.length == 0) return -1;
        int res = Integer.MIN_VALUE;
        //@ maintaining (\forall int i; 0 <= i && i < a.length; res <= a[i]);
        //@ decreases arr.length - i;
        for(int i = 0; i < arr.length; i++) {
            res = ((arr[i] < res) ? arr[i] : res);
        }
        return res;
    }
}
/home/max/Documents/JMLGPT/tmp/MinInArray.java:7: error: variable i is already defined in method minElementInArray(int[])
        //@ maintaining (\forall int i; 0 <= i && i < a.length; res <= a[i]);
                                     ^
/home/max/Documents/JMLGPT/tmp/MinInArray.java:7: error: cannot find symbol
        //@ maintaining (\forall int i; 0 <= i && i < a.length; res <= a[i]);
                                                      ^
  symbol:   variable a
  location: class MinInArray
/home/max/Documents/JMLGPT/tmp/MinInArray.java:7: error: cannot find symbol
        //@ maintaining (\forall int i; 0 <= i && i < a.length; res <= a[i]);
                                                                       ^
  symbol:   variable a
  location: class MinInArray
3 errors

class MinInArray {
    //@ requires arr != null;
    //@ ensures \result == -1 <==> arr.length == 0;
    //@ ensures -1 < \result ==> (\forall int i; 0 <= i && i < arr.length; arr[\result] <= arr[i]);
    public int minElementInArray(int[] arr) {
        if (arr.length == 0) return -1;
        int res = Integer.MIN_VALUE;
        //@ maintaining (\forall int i; 0 <= i && i < arr.length; res <= arr[i]);
        //@ decreases arr.length - i;
        for(int i = 0; i < arr.length; i++) {
            res = ((arr[i] < res) ? arr[i] : res);
        }
        return res;
    }
}
/home/max/Documents/JMLGPT/tmp/MinInArray.java:8: error: variable i is already defined in method minElementInArray(int[])
        //@ maintaining (\forall int i; 0 <= i && i < arr.length; res <= arr[i]);
                                     ^
1 error

class MinInArray {
    //@ requires arr != null;
    //@ ensures \result == -1 <==> arr.length == 0;
    //@ ensures -1 < \result ==> (\forall int i; 0 <= i && i < arr.length; arr[\result] <= arr[i]);
    public int minElementInArray(int[] arr) {
        if (arr.length == 0) return -1;
        int res = Integer.MIN_VALUE;
        //@ maintaining (\forall int j; 0 <= j && j < arr.length; res <= arr[j]);
        //@ decreases arr.length - i;
        for(int i = 0; i < arr.length; i++) {
            res = ((arr[i] < res) ? arr[i] : res);
        }
        return res;
    }
}
/home/max/Documents/JMLGPT/tmp/MinInArray.java:8: verify: The prover cannot establish an assertion (LoopInvariantBeforeLoop) in method minElementInArray
        //@ maintaining (\forall int j; 0 <= j && j < arr.length; res <= arr[j]);
            ^
1 verification failure

class MinInArray {
    //@ requires arr != null;
    //@ ensures \result == -1 <==> arr.length == 0;
    //@ ensures -1 < \result ==> (\forall int i; 0 <= i && i < arr.length; arr[\result] <= arr[i]);
    public int minElementInArray(int[] arr) {
        if (arr.length == 0) return -1;
        int res = arr[0];
        //@ maintaining (\forall int i; 0 <= i && i < arr.length; res <= arr[i]);
        //@ decreases arr.length - i;
        for(int i = 1; i < arr.length; i++) {
            res = ((arr[i] < res) ? arr[i] : res);
        }
        return res;
    }
}
/home/max/Documents/JMLGPT/tmp/MinInArray.java:8: error: variable i is already defined in method minElementInArray(int[])
        //@ maintaining (\forall int i; 0 <= i && i < arr.length; res <= arr[i]);
                                     ^
1 error

class MinInArray {
    //@ requires arr != null;
    //@ ensures \result == -1 <==> arr.length == 0;
    //@ ensures -1 < \result ==> (\forall int i; 0 <= i && i < arr.length; arr[\result] <= arr[i]);
    public int minElementInArray(int[] arr) {
        if (arr.length == 0) return -1;
        int res = arr[0];
        //@ maintaining (\forall int j; 0 <= j && j < arr.length; res <= arr[j]);
        //@ decreases arr.length - j;
        for(int j = 1; j < arr.length; j++) {
            res = ((arr[j] < res) ? arr[j] : res);
        }
        return res;
    }
}
/home/max/Documents/JMLGPT/tmp/MinInArray.java:8: error: variable j is already defined in method minElementInArray(int[])
        //@ maintaining (\forall int j; 0 <= j && j < arr.length; res <= arr[j]);
                                     ^
1 error

class MinInArray {
    //@ requires arr != null;
    //@ ensures \result == -1 <==> arr.length == 0;
    //@ ensures -1 < \result ==> (\forall int i; 0 <= i && i < arr.length; arr[\result] <= arr[i]);
    public int minElementInArray(int[] arr) {
        if (arr.length == 0) return -1;
        int res = arr[0];
        //@ maintaining (\forall int i; 0 <= i && i < arr.length; res <= arr[i]);
        //@ decreases arr.length - i;
        for(int i = 1; i < arr.length; i++) {
            res = ((arr[i] < res) ? arr[i] : res);
        }
        return res;
    }
}
/home/max/Documents/JMLGPT/tmp/MinInArray.java:8: error: variable i is already defined in method minElementInArray(int[])
        //@ maintaining (\forall int i; 0 <= i && i < arr.length; res <= arr[i]);
                                     ^
1 error

class MinInArray {
    //@ requires arr != null;
    //@ ensures \result == -1 <==> arr.length == 0;
    //@ ensures -1 < \result ==> (\forall int j; 0 <= j && j < arr.length; arr[\result] <= arr[j]);
    public int minElementInArray(int[] arr) {
        if (arr.length == 0) return -1;
        int res = arr[0];
        //@ maintaining (\forall int j; 0 <= j && j < arr.length; res <= arr[j]);
        //@ decreases arr.length - j;
        for(int j = 1; j < arr.length; j++) {
            res = ((arr[j] < res) ? arr[j] : res);
        }
        return res;
    }
}
/home/max/Documents/JMLGPT/tmp/MinInArray.java:8: error: variable j is already defined in method minElementInArray(int[])
        //@ maintaining (\forall int j; 0 <= j && j < arr.length; res <= arr[j]);
                                     ^
1 error

class MinInArray {
    //@ requires arr != null;
    //@ ensures \result == -1 <==> arr.length == 0;
    //@ ensures -1 < \result ==> (\forall int i; 0 <= i && i < arr.length; arr[\result] <= arr[i]);
    public int minElementInArray(int[] arr) {
        if (arr.length == 0) return -1;
        int res = arr[0];
        //@ maintaining (\forall int i; 0 <= i && i < arr.length; res <= arr[i]);
        //@ decreases arr.length - i;
        for(int i = 1; i < arr.length; i++) {
            res = ((arr[i] < res) ? arr[i] : res);
        }
        return res;
    }
}
/home/max/Documents/JMLGPT/tmp/MinInArray.java:8: error: variable i is already defined in method minElementInArray(int[])
        //@ maintaining (\forall int i; 0 <= i && i < arr.length; res <= arr[i]);
                                     ^
1 error

class MinInArray {
    //@ requires arr != null;
    //@ ensures \result == -1 <==> arr.length == 0;
    //@ ensures -1 < \result ==> (\forall int j; 0 <= j && j < arr.length; arr[\result] <= arr[j]);
    public int minElementInArray(int[] arr) {
        if (arr.length == 0) return -1;
        int res = arr[0];
        //@ maintaining (\forall int j; 0 <= j && j < arr.length; res <= arr[j]);
        //@ decreases arr.length - j;
        for(int j = 1; j < arr.length; j++) {
            res = ((arr[j] < res) ? arr[j] : res);
        }
        return res;
    }
}
/home/max/Documents/JMLGPT/tmp/MinInArray.java:8: error: variable j is already defined in method minElementInArray(int[])
        //@ maintaining (\forall int j; 0 <= j && j < arr.length; res <= arr[j]);
                                     ^
1 error

class MinInArray {
    //@ requires arr != null;
    //@ ensures \result == -1 <==> arr.length == 0;
    //@ ensures -1 < \result ==> (\forall int i; 0 <= i && i < arr.length; arr[\result] <= arr[i]);
    public int minElementInArray(int[] arr) {
        if (arr.length == 0) return -1;
        int res = arr[0];
        //@ maintaining (\forall int i; 0 <= i && i < arr.length; res <= arr[i]);
        //@ decreases arr.length - i;
        for(int i = 1; i < arr.length; i++) {
            res = ((arr[i] < res) ? arr[i] : res);
        }
        return res;
    }
}
/home/max/Documents/JMLGPT/tmp/MinInArray.java:8: error: variable i is already defined in method minElementInArray(int[])
        //@ maintaining (\forall int i; 0 <= i && i < arr.length; res <= arr[i]);
                                     ^
1 error

